--- a/style/top-nav.css
+++ b/style/top-nav.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #f3bd33;
+    background-color: #ffc107;
     color: #5e5e5e;
     font-weight: 400;
     height: 50px;
@@ -74,16 +74,28 @@
     margin-top: 0px;
     transform: rotate(-405deg);
   }
+
+  .hide-lg {
+
+    display: none;
+
+  }
   
-  @media (max-width: 700px) {
+  @media (max-width: 980px) {
     .menu-button-container {
       display: flex;
+    }
+    .hide-menu {
+
+        display: none;
+
     }
     .menu {
       position: absolute;
       top: 0;
       margin-top: 50px;
       left: 0;
+      z-index: 1;
       flex-direction: column;
       width: 100%;
       justify-content: center;
@@ -97,7 +109,7 @@
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     #menu-toggle:checked ~ .menu li {
-      border: 1px solid #333;
+      /* border: 1px solid #333; */
       height: 2.5em;
       padding: 0.5em;
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -108,10 +120,59 @@
       margin: 0;
       padding: 0.5em 0;
       width: 100%;
-      color: #F1C951;
-      background-color: #5e5e5e;
+      color: #fff;
+      background-color: #333;
     }
-    .menu > li:not(:last-child) {
-      border-bottom: 1px solid #444;
+
+    .menu > li:hover {
+
+        background-color: #f3bd33;
+        color: #333;
+
     }
+
   }
+
+
+  /* nav items hover effects */
+
+li a {
+
+    text-decoration: none;
+    color: #fff;
+
+}
+
+li a:hover {
+
+    color: #333;
+
+}
+/* 
+.menu a:before, .menu a:after {
+    position: relative;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background: #FFF;
+    content: "";
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.menu a:before {
+    border-bottom: 1px solid white;
+    top: 0px;
+    transform: translateY(-10px);
+}
+
+.menu a:after {
+    border-bottom: 1px solid white;
+    bottom: 0px;
+}
+
+.menu a:hover:before, .menu a:hover:after {
+    opacity: 1;
+    border-bottom: 1px solid white;
+    transform: translateY(0px);
+} */
