--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,13 @@
 
 }
 
+#home {
+
+    height: 100vh;
+    max-height: 100vh;
+
+}
+
 .sec-container {
 
     height: inherit;
@@ -40,6 +47,16 @@ li {
 
     list-style: none;
     font-size: 1rem;
+
+}
+
+video {
+
+    border-radius: 25px;
+    width: 70%;
+    height: 100%;
+    min-width: 300px;
+    min-height: 200px;
 
 }
 
@@ -63,7 +80,8 @@ ul {
 .landing-header {
 
     font-family: 'Roboto', sans-serif;
-    font-size: 4vw;
+    font-size: 4.5rem;
+    line-height: 1.13;
     color: white;
     text-align: center;
 }
@@ -160,6 +178,23 @@ ul {
     font-weight: 400;
 
 }
+
+/* header text query */
+
+@media (min-width: 721px) and (max-width: 1024px) {
+
+    .landing-header {
+
+        font-family: 'Roboto', sans-serif;
+        font-size: 4rem;
+        line-height: 1.13;
+        color: white;
+        text-align: center;
+    }
+
+}
+
+/* header text query */
 
 @media (max-width: 1024px) { /* 280 - Galaxy Fold */
     
