--- a/style/top-nav.css
+++ b/style/top-nav.css
@@ -1,5 +1,4 @@
 
-
 .top-nav {
     display: flex;
     flex-direction: row;
@@ -18,6 +17,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    font-weight: bold;
   }
   
   .menu > li {
@@ -100,6 +100,7 @@
       width: 100%;
       justify-content: center;
       align-items: center;
+      font-weight: bold;
     }
     #menu-toggle ~ .menu li {
       height: 0;
@@ -109,7 +110,7 @@
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     #menu-toggle:checked ~ .menu li {
-      /* border: 1px solid #333; */
+      border: 2px solid #333;
       height: 2.5em;
       padding: 0.5em;
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -139,16 +140,16 @@
 li a {
 
     text-decoration: none;
-    color: #fff;
+    color: aliceblue;
 
 }
 
 li a:hover {
 
-    color: #333;
+    color: #5e5e5e;
 
 }
-/* 
+
 .menu a:before, .menu a:after {
     position: relative;
     left: 0px;
@@ -175,4 +176,47 @@ li a:hover {
     opacity: 1;
     border-bottom: 1px solid white;
     transform: translateY(0px);
-} */
+}
+
+/* Modal style */
+#video-modal {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 3%;
+    padding: 10px;
+    width: 100vw;
+    height: 100vh;
+  }
+  
+  .modalcontent {
+    background-color: rgba(0, 0, 0, 0.637);
+    padding: 25px;
+    width: 90%;
+    height: 90%;
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    border-radius: 20px;
+  }
+  
+  .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 5px;
+    margin-right: 15px;
+    font-size: 28px;
+    font-weight: bold;
+    color: #aaa;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  /* Modal style */
